Created attachment 109317 [details] Document +++ This bug was initially created as a clone of Bug #84318 +++ In the following RTF snippet from the clipboard the RTL text direction is not imported properly by LO 4.3.0 to 4.4 master.
(In reply to Urmas from comment #0) > attachment 109317 [details] > In the following RTF snippet from the clipboard the RTL text direction is > not imported properly by LO 4.3.0 to 4.4 master. Urmas: 1) Is this a regression? (e.g. was import working properly prior to 4.3.0?) 2) Can you provide a screenshot from Word or a previous version of LO that shows how the document should import? Thanks.
Not present in AOO any version. All those stupid squiggles should be aligned right, and pilcrow mark should be on the left. Paragraphs consisting solely of <FIELD> should be left-aligned and have 2" left indent.
Confirming.
Confirmed that the squiggles are not aligned right. Pilcrows are not on the left. Paragraphs with only <FIELD> are on the right and they have an indent of 16,20 ch before text. Win 7 64-bit Version: 4.5.0.0.alpha0+ Build ID: 6e91763769a562b88882a4c2a94b1367c6ed4866 TinderBox: Win-x86@39, Branch:master, Time: 2014-12-11_00:35:18
The RTL is ok in 3.3, but unfortunately not on 3.5. Ubuntu 14.10 64-bit LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4 LibreOffice 3.5.0rc3 Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
(In reply to Beluga from comment #5) > The RTL is ok in 3.3, but unfortunately not on 3.5. Whiteboard -> bibisectRequest
I removed bibisectRequest, because the problem is not in a currently bibisectable range. (I won't add notBibisectable, because that means the bibisecting was tried and failed)
Removing depends on, this has little to do with pasting, I think. The problem is that \rtlpar should be mapped to the ooxml:CT_PPrBase_bidi dmapper token, but it's mapped to ooxml:CT_PPrBase_textDirection currently, which was probably just a guess.
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ee2a882dddb395a816cd54004b634d57cfb2446 tdf#86182 RTF import: fix handling of \rtlpar It will be available in 5.0.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-4-4": http://cgit.freedesktop.org/libreoffice/core/commit/?id=502e606c84666df66fa1b099ae4147220f262841&h=libreoffice-4-4 tdf#86182 RTF import: fix handling of \rtlpar It will be available in 4.4.4. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Migrating Whiteboard tags to Keywords: (preBibisect) [NinjaEdit]