tdf#86182 RTF import: fix handling of \rtlpar

Commit 558d5c25a0b1d6a937d33291a4b6cd7fca6cb15b (implement RTF_LTRPAR
and RTF_RTLPAR, 2011-06-09) was just a guess, this one is the proper
mapping.

Change-Id: I1156ef5ddc34264d761d3e64dd0537bc6ec0ced7